--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <header>
   <title>Emma Jessica Lin</title>
-  <link rel="stylesheet" type="text/css" href="main.css"/>
+  <link type="text/css" rel="stylesheet" href="stylesheets/main.css" />
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet'>
 </header>
