--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
-<header>
+<html lang="en">
+<head>
   <title>Emma Jessica Lin</title>
-  <link type="text/css" rel="stylesheet" href="stylesheets/main.css" />
+  <link href="/website/main.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet'>
-</header>
+</head>
 
 <body>
   <div class="body">
