--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
   <html>
   <header>
     <title>Emma Jessica Lin</title>
-    <link rel="stylesheet" type="text/css" href="main.css"/>
+    <link href="/website/main.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet'>
   </header>
