--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <div class="box">
 <figure class="snip1504">
-  <img src="Enrou/enrou-team.jpg">
+  <img src="enrou-team.jpg">
   <figcaption>
     <h3>Enrou</h3>
     <h5>Head of Owned Media</h5>
@@ -70,7 +70,7 @@
 
 <div class="box">
 <figure class="snip1504">
-  <img src="Siemer/Siemer Day 2-003 square.jpg">
+  <img src="Siemer Day 2-003 square.jpg">
   <figcaption>
     <h3>Siemer & Associates, LLC</h3>
     <h5>Operations and </h5><h5>Business Development Intern</h5>
@@ -92,7 +92,7 @@
 
 <div class="box">
   <figure class="snip1504">
-    <img src="DSP/MTB-1-square.png">
+    <img src="MTB-1-square.png">
     <figcaption>
       <h3>Delta Sigma Pi</h3>
       <h5>International </h5><h5>Business Fraternity</h5>
@@ -103,7 +103,7 @@
 
 <div class="box">
 <figure class="snip1504">
-  <img src="IMAX/imax-logo-square.jpg">
+  <img src="imax-logo-square.jpg">
   <figcaption>
     <h3>IMAX Corporation</h3>
     <h5>International </h5><h5>Strategy Intern</h5>
@@ -125,7 +125,7 @@
 
 <div class="box">
 <figure class="snip1504">
-  <img src="uTapp/utapp-logo.jpg">
+  <img src="utapp-logo.jpg">
   <figcaption>
     <h3>uTapp, LLC</h3>
     <h5>Business </h5><h5>Development Intern</h5>
@@ -136,7 +136,7 @@
 
 <div class="box">
   <figure class="snip1504">
-    <img src="CES/CES-3-square.jpg">
+    <img src="CES-3-square.jpg">
     <figcaption>
       <h3>CES 2017</h3>
       <h5>Xiaomi Brand Ambassador Externship</h5>
@@ -147,7 +147,7 @@
 
 <div class="box">
   <figure class="snip1504">
-    <img src="SAA/preshies-square.jpg">
+    <img src="preshies-square.jpg">
     <figcaption>
       <h3>Student Alumni Association</h3>
       <h5>Assistant Director</h5>
@@ -191,7 +191,7 @@
 
 <div class="box">
 <figure class="snip1504">
-  <img src="Creative/art-old.jpg">
+  <img src="art-old.jpg">
   <figcaption>
     <h3>Art</h3>
   </figcaption>
@@ -201,7 +201,7 @@
 
 <div class="box">
   <figure class="snip1504">
-    <img src="Creative/sf-square.jpg">
+    <img src="sf-square.jpg">
     <figcaption>
       <h3>Photography</h3>
     </figcaption>
