--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class = "boxes">
   <div class="box">
   <figure class="snip1504">
-    <img src="prof-pic-square.jpg">
+    <img src="prof-pic-square.JPG">
     <figcaption>
       <h3>About Me</h3>
     </figcaption>
@@ -70,7 +70,7 @@
 
 <div class="box">
 <figure class="snip1504">
-  <img src="Siemer Day 2-003 square.jpg">
+  <img src="Siemer-Day-2-003 square.jpg">
   <figcaption>
     <h3>Siemer & Associates, LLC</h3>
     <h5>Operations and </h5><h5>Business Development Intern</h5>
