--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <div class="box">
 <figure class="snip1504">
-  <img src="Siemer-Day-2-003 square.jpg">
+  <img src="Siemer-Day-2-003.jpg">
   <figcaption>
     <h3>Siemer & Associates, LLC</h3>
     <h5>Operations and </h5><h5>Business Development Intern</h5>
