--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <a href="#"><img src="emmajessicalin-logo.png" width=180px></a>
 </div>
   <div id="home_description">
-    <a href="#"><h4><b><div class="hvr-fade-yellow"> HI, I'M EMMA.</div><a></b></h4><br/>
+    <a href="/website/about.html"><h4><b><div class="hvr-fade-yellow"> HI, I'M EMMA.</div><a></b></h4><br/>
     <p><div class="hvr-fade">UCLA. Cognitive Science. Specialization in Computing.</div></p>
     <br/><p><div class="hvr-fade">Interested in business, tech, psychology and art.</div></p>
     <br/>
   </div>
   <div class="hvr-forward">
-      <a href="#" id="home_button">SEE MORE</a>
+      <a href="/website/about.html" id="home_button">SEE MORE</a>
   </div>
   </div>
 
