--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
 <!CONTACT INFO>
   <div class="contact-info">
-    <a href="#"><img src="linkedin-icon.png"></a>
+    <a href="https://www.linkedin.com/in/emmajessicalin"><img src="linkedin-icon.png"></a>
     <a href="mailto:emma.j.lin@gmail.com"> <img src="mail-icon.jpg"></a>
-    <a href="#"> <img src="vsco-icon.png"></a>
-    <a href="#"> <img src="yelp-icon.png"></a>
+    <a href="http://vsco.co/emmajessicalin"> <img src="vsco-icon.png"></a>
+    <a href="https://emmajessicalin.yelp.com"> <img src="yelp-icon.png"></a>
   </br><a href="#"><div class="hvr-fade-2">emma.j.lin@gmail.com</div></a>
   </div>
 
@@ -42,7 +42,7 @@
     <figcaption>
       <h3>About Me</h3>
     </figcaption>
-    <a href="#"></a>
+    <a href="/website/about.html"></a>
   </figure>
 </div>
 
@@ -53,7 +53,7 @@
     <h3>Enrou</h3>
     <h5>Head of Owned Media</h5>
   </figcaption>
-  <a href="#"></a>
+  <a href="/website/enrou.html"></a>
 </figure>
 </div>
 
@@ -75,7 +75,7 @@
     <h3>Siemer & Associates, LLC</h3>
     <h5>Operations and </h5><h5>Business Development Intern</h5>
   </figcaption>
-  <a href="#"></a>
+  <a href="/website/siemer.html"></a>
 </figure>
 </div>
 
@@ -86,7 +86,7 @@
       <h3>Nectar Streetwear</h3>
       <h5>Co-founder</h5>
     </figcaption>
-    <a href="#"></a>
+    <a href="/website/nectar.html"></a>
   </figure>
 </div>
 
@@ -97,7 +97,7 @@
       <h3>Delta Sigma Pi</h3>
       <h5>International </h5><h5>Business Fraternity</h5>
     </figcaption>
-    <a href="#"></a>
+    <a href="/website/dsp.html"></a>
   </figure>
 </div>
 
@@ -108,7 +108,7 @@
     <h3>IMAX Corporation</h3>
     <h5>International </h5><h5>Strategy Intern</h5>
   </figcaption>
-  <a href="#"></a>
+  <a href="/website/imax.html"></a>
 </figure>
 </div>
 
@@ -119,7 +119,7 @@
       <h3>London School of Economics</h3>
       <h5>Study Abroad Program</h5>
     </figcaption>
-    <a href="#"></a>
+    <a href="/website/lse.html"></a>
   </figure>
 </div>
 
@@ -130,7 +130,7 @@
     <h3>uTapp, LLC</h3>
     <h5>Business </h5><h5>Development Intern</h5>
   </figcaption>
-  <a href="#"></a>
+  <a href="/website/utapp.html"></a>
 </figure>
 </div>
 
@@ -141,7 +141,7 @@
       <h3>CES 2017</h3>
       <h5>Xiaomi Brand Ambassador Externship</h5>
     </figcaption>
-    <a href="#"></a>
+    <a href="/website/xiaomi.html"></a>
   </figure>
 </div>
 
@@ -152,7 +152,7 @@
       <h3>Student Alumni Association</h3>
       <h5>Assistant Director</h5>
     </figcaption>
-    <a href="#"></a>
+    <a href="/website/saa.html"></a>
   </figure>
 </div>
 
@@ -163,7 +163,7 @@
       <h3>Undergraduate</h3><h3>Business Society</h3>
       <h5>Career Development</h5><h5>Director</h5>
     </figcaption>
-    <a href="#"></a>
+    <a href="/website/ubs.html"></a>
   </figure>
 </div>
 
@@ -174,7 +174,7 @@
       <h3>Cultural Affairs Commission</h3>
       <h5>Marketing Designer</h5>
     </figcaption>
-    <a href="#"></a>
+    <a href="/website/cac.html"></a>
   </figure>
 </div>
 
@@ -185,7 +185,7 @@
       <h3>UCLA </h3><h3>College Academic Counseling</h3>
       <h5>ASK Peer Counselor</h5>
     </figcaption>
-    <a href="#"></a>
+    <a href="/website/ask.html"></a>
   </figure>
 </div>
 
@@ -195,7 +195,7 @@
   <figcaption>
     <h3>Art</h3>
   </figcaption>
-  <a href="#"></a>
+  <a href="/website/creative.html"></a>
 </figure>
 </div>
 
@@ -205,7 +205,7 @@
     <figcaption>
       <h3>Photography</h3>
     </figcaption>
-    <a href="#"></a>
+    <a href="/website/creative.html"></a>
   </figure>
 </div>
 </div>
