--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <!HOME PANEL>
     <div class="home_panel">
     <div id="home_header">
-      <a href="#"><img src="emmajessicalin-logo.png" width=180px></a>
+      <a href="/website/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
   </div>
     <div class="hvr-forward"><a href="#" id="home_button">RESUME</a></div>
     <div class="hvr-forward"><a href="#" id="home_button">ABOUT</a></div>
@@ -21,10 +21,10 @@
 
   <!CONTACT INFO>
     <div class="contact-info">
-      <a href="#"><img src="linkedin-icon.png"></a>
+      <a href="https://linkedin.com/in/emmajessicalin"><img src="linkedin-icon.png"></a>
       <a href="mailto:emma.j.lin@gmail.com"> <img src="mail-icon.jpg"></a>
-      <a href="#"> <img src="vsco-icon.png"></a>
-      <a href="#"> <img src="yelp-icon.png"></a>
+      <a href="https://vsco.co/emmajessicalin"> <img src="vsco-icon.png"></a>
+      <a href="https://emmajessicalin.yelp.com"> <img src="yelp-icon.png"></a>
     </br><a href="mailto:emma.j.lin@gmail.com"><div class="hvr-fade-2">emma.j.lin@gmail.com</div></a>
 
     </div>
@@ -43,22 +43,22 @@ Currently, I'm studying
 and I find the intersection of business and tech fascinating.
 </br>
 </br>
-Most recently, I interned at <a href="#"><div class="hvr-fade-yellow">IMAX Corporation</div></a> and worked within the International Marketing department.
-Before this, I worked at a <a href="#"><div class="hvr-fade-yellow">socially-responsible e-commerce company</div></a>,
-<a href="#"><div class="hvr-fade-yellow">a boutique investment banking firm</div></a>
-and an <a href="#"><div class="hvr-fade-yellow">app start-up</div></a>.
+Most recently, I interned at <a href="/website/imax.html"><div class="hvr-fade-yellow">IMAX Corporation</div></a> and worked within the International Marketing department.
+Before this, I worked at a <a href="/website/enrou.html"><div class="hvr-fade-yellow">socially-responsible e-commerce company</div></a>,
+<a href="/website/siemer.html"><div class="hvr-fade-yellow">a boutique investment banking firm</div></a>
+and an <a href="/website/utapp.html"><div class="hvr-fade-yellow">app start-up</div></a>.
 </br>
 </br>
 At UCLA, I enjoy involving myself in campus affairs, whether it's through
-an <a href="#"><div class="hvr-fade-yellow">event-based organization dedicated to fostering Bruin spirit</div></a> or
-<a href="#"><div class="hvr-fade-yellow">business organizations that focus on the professional development of students</div></a>.
+an <a href="/website/saa.html"><div class="hvr-fade-yellow">event-based organization dedicated to fostering Bruin spirit</div></a> or
+<a href="/website/ubs.html"><div class="hvr-fade-yellow">business organizations that focus on the professional development of students</div></a>.
 </br>
 </br>
 I'm an <a href="#"><div class="hvr-fade-yellow">ISFJ</div></a>,
 cheese enthusiast and
-<a href="#"><div class="hvr-fade-yellow">Yelper</div></a>.
-In my free time, I love <a href="#"><div class="hvr-fade-yellow">taking photos</div></a>,
-<a href="#"><div class="hvr-fade-yellow">drawing</div></a>
+<a href="https://emmajessicalin.yelp.com"><div class="hvr-fade-yellow">Yelper</div></a>.
+In my free time, I love <a href="https://vsco.co/emmajessicalin"><div class="hvr-fade-yellow">taking photos</div></a>,
+<a href="/website/creative.html"><div class="hvr-fade-yellow">drawing</div></a>
 and listening to the <a href="#"><div class="hvr-fade-yellow">Hamilton soundtrack</div></a>.
 
 </div>
