--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@
     <div id="home_header">
       <a href="/website/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
   </div>
-    <div class="hvr-forward"><a href="#" id="home_button">RESUME</a></div>
-    <div class="hvr-forward"><a href="#" id="home_button">ABOUT</a></div>
-    <div class="hvr-forward"><a href="#" id="home_button">HOME</a></div>
+    <div class="hvr-forward"><a href="/website/resume.html" id="home_button">RESUME</a></div>
+    <div class="hvr-forward"><a href="/website/about.html" id="home_button">ABOUT</a></div>
+    <div class="hvr-forward"><a href="/website/index.html" id="home_button">HOME</a></div>
   </div>
 
   <!CONTACT INFO>
