--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 <div class = "boxes">
   <div class="box">
   <figure class="snip1504">
-    <a href="/website/about.html"><img src="prof-pic-square.JPG">
+    <a href="/website/about.html"><img src="prof-pic-square.JPG"></a>
     <figcaption>
       <h3>About Me</h3>
     </figcaption>
-    </a>
+    
   </figure>
 </div>
 
