--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 <div class = "boxes">
   <div class="box">
   <figure class="snip1504">
-    <a href="/website/about.html"><img src="prof-pic-square.JPG"></a>
+    <img src="prof-pic-square.JPG">
     <figcaption>
-      <h3>About Me</h3>
+      <a href="/website/about.html"><h3>About Me</h3></a>
     </figcaption>
     
   </figure>
