--- a/index.html
+++ b/index.html
@@ -36,15 +36,17 @@
 
 <!CONTENT>
 <div class = "boxes">
+  <a href="/website/about.html">
   <div class="box">
   <figure class="snip1504">
     <img src="prof-pic-square.JPG">
     <figcaption>
-      <a href="/website/about.html"><h3>About Me</h3></a>
+      <h3>About Me</h3>
     </figcaption>
     
   </figure>
 </div>
+    </a>
 
 <div class="box">
 <figure class="snip1504">
