--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 </div>
     </a>
 
+<a href="/website/enrou.html">
 <div class="box">
 <figure class="snip1504">
   <img src="enrou-team.jpg">
@@ -55,10 +56,11 @@
     <h3>Enrou</h3>
     <h5>Head of Owned Media</h5>
   </figcaption>
-  <a href="/website/enrou.html"></a>
 </figure>
 </div>
-
+  </a>
+  
+<a href="#">
 <div class="box">
 <figure class="snip1504">
   <img src="ucla-seal.jpg">
@@ -66,10 +68,11 @@
     <h3>UCLA</h3>
     <h5>Cognitive Science</h5>
   </figcaption>
-  <a href="#"></a>
 </figure>
 </div>
+  </a>
 
+<a href="/website/siemer.html">
 <div class="box">
 <figure class="snip1504">
   <img src="Siemer-Day-2-003.jpg">
@@ -77,10 +80,11 @@
     <h3>Siemer & Associates, LLC</h3>
     <h5>Operations and </h5><h5>Business Development Intern</h5>
   </figcaption>
-  <a href="/website/siemer.html"></a>
 </figure>
 </div>
-
+  </a>
+  
+<a href="/website/nectar.html">
 <div class="box">
   <figure class="snip1504">
     <img src="nectar-newspaper.png">
@@ -88,10 +92,11 @@
       <h3>Nectar Streetwear</h3>
       <h5>Co-founder</h5>
     </figcaption>
-    <a href="/website/nectar.html"></a>
   </figure>
 </div>
+  </a>
 
+  <a href="/website/dsp.html">
 <div class="box">
   <figure class="snip1504">
     <img src="MTB-1-square.png">
@@ -99,10 +104,11 @@
       <h3>Delta Sigma Pi</h3>
       <h5>International </h5><h5>Business Fraternity</h5>
     </figcaption>
-    <a href="/website/dsp.html"></a>
   </figure>
 </div>
+    </a>
 
+  <a href="/website/imax.html">
 <div class="box">
 <figure class="snip1504">
   <img src="imax-logo-square.jpg">
@@ -110,10 +116,11 @@
     <h3>IMAX Corporation</h3>
     <h5>International </h5><h5>Strategy Intern</h5>
   </figcaption>
-  <a href="/website/imax.html"></a>
 </figure>
 </div>
+ </a>
 
+  <a href="/website/lse.html">
 <div class="box">
   <figure class="snip1504">
     <img src="lse-logo-square.png">
@@ -121,10 +128,11 @@
       <h3>London School of Economics</h3>
       <h5>Study Abroad Program</h5>
     </figcaption>
-    <a href="/website/lse.html"></a>
   </figure>
 </div>
+    </a>
 
+  <a href="/website/utapp.html">
 <div class="box">
 <figure class="snip1504">
   <img src="utapp-logo.jpg">
@@ -132,43 +140,47 @@
     <h3>uTapp, LLC</h3>
     <h5>Business </h5><h5>Development Intern</h5>
   </figcaption>
-  <a href="/website/utapp.html"></a>
 </figure>
 </div>
+    </a>
 
+  <a href="/website/xiaomi.html">
 <div class="box">
   <figure class="snip1504">
     <img src="CES-3-square.jpg">
     <figcaption>
       <h3>CES 2017</h3>
       <h5>Xiaomi Brand Ambassador Externship</h5>
-    </figcaption>
-    <a href="/website/xiaomi.html"></a>
+    </figcaption>  
   </figure>
 </div>
+    </a>
 
+  <a href="/website/saa.html">
 <div class="box">
   <figure class="snip1504">
     <img src="preshies-square.jpg">
     <figcaption>
       <h3>Student Alumni Association</h3>
       <h5>Assistant Director</h5>
-    </figcaption>
-    <a href="/website/saa.html"></a>
+    </figcaption> 
   </figure>
 </div>
+    </a>
 
+  <a href="/website/ubs.html">
 <div class="box">
   <figure class="snip1504">
     <img src="ubs-cover.png">
     <figcaption>
       <h3>Undergraduate</h3><h3>Business Society</h3>
       <h5>Career Development</h5><h5>Director</h5>
-    </figcaption>
-    <a href="/website/ubs.html"></a>
+    </figcaption>   
   </figure>
 </div>
+    </a>
 
+  <a href="/website/cac.html">
 <div class="box">
   <figure class="snip1504">
     <img src="cac-cover-square.png">
@@ -176,10 +188,11 @@
       <h3>Cultural Affairs Commission</h3>
       <h5>Marketing Designer</h5>
     </figcaption>
-    <a href="/website/cac.html"></a>
   </figure>
 </div>
+    </a>
 
+  <a href="/website/ask.html">
 <div class="box">
   <figure class="snip1504">
     <img src="ask-logo.png">
@@ -187,29 +200,33 @@
       <h3>UCLA </h3><h3>College Academic Counseling</h3>
       <h5>ASK Peer Counselor</h5>
     </figcaption>
-    <a href="/website/ask.html"></a>
   </figure>
 </div>
+  </a>
 
+  <a href="/website/creative.html">
 <div class="box">
 <figure class="snip1504">
   <img src="art-old.jpg">
   <figcaption>
     <h3>Art</h3>
   </figcaption>
-  <a href="/website/creative.html"></a>
 </figure>
 </div>
+    </a>
 
+  <a href="/website/creative.html">
 <div class="box">
   <figure class="snip1504">
     <img src="sf-square.jpg">
     <figcaption>
       <h3>Photography</h3>
     </figcaption>
-    <a href="/website/creative.html"></a>
+    
   </figure>
 </div>
+    </a>
+  
 </div>
 </div>
 </div>
