--- a/ask.html
+++ b/ask.html
@@ -14,26 +14,26 @@
 <!HOME PANEL>
   <div class="home_panel">
   <div id="home_header">
-    <a href="#"><img src="emmajessicalin-logo.png" width=180px></a>
+    <a href="/website/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
 </div>
-  <div class="hvr-forward"><a href="#" id="home_button">RESUME</a></div>
-  <div class="hvr-forward"><a href="#" id="home_button">ABOUT</a></div>
-  <div class="hvr-forward"><a href="#" id="home_button">HOME</a></div>
+  <div class="hvr-forward"><a href="/website/resume.html" id="home_button">RESUME</a></div>
+  <div class="hvr-forward"><a href="/website/about.html" id="home_button">ABOUT</a></div>
+  <div class="hvr-forward"><a href="/website/index.html" id="home_button">HOME</a></div>
 </div>
 
 <!CONTACT INFO>
   <div class="contact-info">
-    <a href="#"><img src="linkedin-icon.png"></a>
+    <a href="https://linkedin.com/in/emmajessicalin"><img src="linkedin-icon.png"></a>
     <a href="mailto:emma.j.lin@gmail.com"> <img src="mail-icon.jpg"></a>
-    <a href="#"> <img src="vsco-icon.png"></a>
-    <a href="#"> <img src="yelp-icon.png"></a>
+    <a href="https://vsco.co/emmajessicalin"> <img src="vsco-icon.png"></a>
+    <a href="https://emmajessicalin.yelp.com"> <img src="yelp-icon.png"></a>
   </br><a href="mailto:emma.j.lin@gmail.com"><div class="hvr-fade-2">emma.j.lin@gmail.com</div></a>
   </div>
 
 <!CONTENT>
 <div class="content-title">
   <img src="bg-saa.jpg" width=100%>
-    <a href="#"><h1><div class="hvr-fade-2">ASK PEER COUNSELING</div></h1></a>
+    <a href="/website/ask.html"><h1><div class="hvr-fade-2">ASK PEER COUNSELING</div></h1></a>
 </div>
 <div class="content">
   As an ASK Peer Counselor,
