--- a/enrou.html
+++ b/enrou.html
@@ -14,19 +14,19 @@
 <!HOME PANEL>
   <div class="home_panel">
   <div id="home_header">
-    <a href="#"><img src="emmajessicalin-logo.png" width=180px></a>
+    <a href="/website/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
 </div>
-  <div class="hvr-forward"><a href="#" id="home_button">RESUME</a></div>
-  <div class="hvr-forward"><a href="#" id="home_button">ABOUT</a></div>
-  <div class="hvr-forward"><a href="#" id="home_button">HOME</a></div>
+  <div class="hvr-forward"><a href="/website/resume.html" id="home_button">RESUME</a></div>
+  <div class="hvr-forward"><a href="/website/about.html" id="home_button">ABOUT</a></div>
+  <div class="hvr-forward"><a href="/website/index.html" id="home_button">HOME</a></div>
 </div>
 
 <!CONTACT INFO>
   <div class="contact-info">
-    <a href="#"><img src="linkedin-icon.png"></a>
+    <a href="https://linkedin.com/in/emmajessicalin"><img src="linkedin-icon.png"></a>
     <a href="mailto:emma.j.lin@gmail.com"> <img src="mail-icon.jpg"></a>
-    <a href="#"> <img src="vsco-icon.png"></a>
-    <a href="#"> <img src="yelp-icon.png"></a>
+    <a href="https://vsco.co/emmajessicalin"> <img src="vsco-icon.png"></a>
+    <a href="https://emmajessicalin.yelp.com"> <img src="yelp-icon.png"></a>
   </br><a href="mailto:emma.j.lin@gmail.com"><div class="hvr-fade-2">emma.j.lin@gmail.com</div></a>
   </div>
 
@@ -39,9 +39,9 @@
   We use the power of trade to create sustainable change within global communities and to end the cycle of poverty through small-business and community development.
   By providing a central hub of socially responsible brands, we seek to generate tangible ways to make sure your purchase has a positive social and financial impact globally.
   <div class="icons">
-    <a href="#"><img src="website-icon.png"></a>
-    <a href="#"><img src="instagram-icon.png"></a>
-    <a href="#"><img src="fb-icon.png"></a>
+    <a href="https://enrou.co"><img src="website-icon.png"></a>
+    <a href="https://instagram.com/enrou"><img src="instagram-icon.png"></a>
+    <a href="https://www.facebook.com/enrou.co/"><img src="fb-icon.png"></a>
   </div>
   At Enrou, I was hired to be Marketing Intern but was later promoted to Head of Owned Media.
   In my new role, I conducted market research on the ethical fashion industry and performed competitive analyses.
