--- a/dsp.html
+++ b/dsp.html
@@ -16,17 +16,17 @@
   <div id="home_header">
     <a href="#"><img src="emmajessicalin-logo.png" width=180px></a>
 </div>
-  <div class="hvr-forward"><a href="#" id="home_button">RESUME</a></div>
-  <div class="hvr-forward"><a href="#" id="home_button">ABOUT</a></div>
-  <div class="hvr-forward"><a href="#" id="home_button">HOME</a></div>
+  <div class="hvr-forward"><a href="/website/resume.html" id="home_button">RESUME</a></div>
+  <div class="hvr-forward"><a href="/website/about.html" id="home_button">ABOUT</a></div>
+  <div class="hvr-forward"><a href="/website/index.html" id="home_button">HOME</a></div>
 </div>
 
 <!CONTACT INFO>
   <div class="contact-info">
-    <a href="#"><img src="linkedin-icon.png"></a>
+    <a href="https://linkedin.com/in/emmajessicalin"><img src="linkedin-icon.png"></a>
     <a href="mailto:emma.j.lin@gmail.com"> <img src="mail-icon.jpg"></a>
-    <a href="#"> <img src="vsco-icon.png"></a>
-    <a href="#"> <img src="yelp-icon.png"></a>
+    <a href="https://vsco.co/emmajessicalin"> <img src="vsco-icon.png"></a>
+    <a href="https://emmajessicalin.yelp.com"> <img src="yelp-icon.png"></a>
   </br><a href="mailto:emma.j.lin@gmail.com"><div class="hvr-fade-2">emma.j.lin@gmail.com</div></a>
   </div>
 
@@ -73,19 +73,19 @@ Each member was given a number of points to reach as a goal, depending on their 
   			<div id=overflow>
   				<div class=inner>
   					<article>
-              <img src="DSP/flyer-front.png" height=480px>
+              <img src="flyer-front.png" height=480px>
   					</article>
   					<article>
-  						<img src="DSP/flyer-back.png" height=480px>
+  						<img src="flyer-back.png" height=480px>
   					</article>
   					<article>
-  						<img src="DSP/MTB_Mel-Emma.png" height=480px>
+  						<img src="MTB_Mel-Emma.png" height=480px>
   					</article>
   					<article>
-  						<img src="DSP/MTB_Timo-Aditya.png" height=480px>
+  						<img src="MTB_Timo-Aditya.png" height=480px>
   					</article>
   					<article>
-  						<img src="DSP/MTB-Shell.png" height=480px>
+  						<img src="MTB-Shell.png" height=480px>
   					</article>
   				</div> <!-- .inner -->
   			</div> <!-- #overflow -->
@@ -118,18 +118,18 @@ Each member was given a number of points to reach as a goal, depending on their 
   doing LinkedIn headshots and creating videos for promotional and internal use.
 </br></br>
 <div class="dsp-photos">
-  <img src="DSP/board-w17.jpg" class="dsp-photo">
+  <img src="board-w17.jpg" class="dsp-photo">
 </div>
 <div class="dsp-photos">
-  <img src="DSP/bella-1.jpg" class="dsp-photo">
-  <img src="DSP/ryan-1.jpg" class="dsp-photo">
+  <img src="bella-1.jpg" class="dsp-photo">
+  <img src="ryan-1.jpg" class="dsp-photo">
 </div>
 <div class="dsp-photos">
-  <img src="DSP/samy.jpg" class="dsp-photo">
+  <img src="samy.jpg" class="dsp-photo">
 </div>
 <div class="dsp-photos">
-  <img src="DSP/ellen-1.jpg" class="dsp-photo">
-  <img src="DSP/jess.jpg" class="dsp-photo">
+  <img src="ellen-1.jpg" class="dsp-photo">
+  <img src="jess.jpg" class="dsp-photo">
 </div>
 </div>
 
