--- a/dsp.html
+++ b/dsp.html
@@ -14,7 +14,7 @@
 <!HOME PANEL>
   <div class="home_panel">
   <div id="home_header">
-    <a href="#"><img src="emmajessicalin-logo.png" width=180px></a>
+    <a href="/website/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
 </div>
   <div class="hvr-forward"><a href="/website/resume.html" id="home_button">RESUME</a></div>
   <div class="hvr-forward"><a href="/website/about.html" id="home_button">ABOUT</a></div>
@@ -32,7 +32,7 @@
 
 <!CONTENT>
 <div class="content-title">
-    <a href="#"><h1><div class="hvr-fade-2">INTERNATIONAL BUSINESS FRATERNITY OF DELTA SIGMA PI</div></h1></a>
+    <a href="https://xiodsp.com"><h1><div class="hvr-fade-2">INTERNATIONAL BUSINESS FRATERNITY OF DELTA SIGMA PI</div></h1></a>
 </div>
 <div class="content">
 As America's premier business fraternity,
@@ -43,9 +43,9 @@ and experience the lifelong bond of brotherhood.
 </br></br>
 
 <div class="icons">
-  <a href="#"><img src="website-icon.png"></a>
-  <a href="#"><img src="instagram-icon.png"></a>
-  <a href="#"><img src="fb-icon.png"></a>
+  <a href="https://xiodsp.com"><img src="website-icon.png"></a>
+  <a href="https://instagram.com/ucladsp"><img src="instagram-icon.png"></a>
+  <a href="https://facebook.com/ucladeltasigmapi"><img src="fb-icon.png"></a>
 </div>
 
 <hr/>
