--- a/cac.html
+++ b/cac.html
@@ -14,7 +14,7 @@
 <!HOME PANEL>
   <div class="home_panel">
   <div id="home_header">
-    <a href="#"><img src="emmajessicalin-logo.png" width=180px></a>
+    <a href="/website/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
 </div>
   <div class="hvr-forward"><a href="#" id="home_button">RESUME</a></div>
   <div class="hvr-forward"><a href="#" id="home_button">ABOUT</a></div>
@@ -23,10 +23,10 @@
 
 <!CONTACT INFO>
   <div class="contact-info">
-    <a href="#"><img src="linkedin-icon.png"></a>
+    <a href="https://linkedin.com/in/emmajessicalin"><img src="linkedin-icon.png"></a>
     <a href="mailto:emma.j.lin@gmail.com"> <img src="mail-icon.jpg"></a>
-    <a href="#"> <img src="vsco-icon.png"></a>
-    <a href="#"> <img src="yelp-icon.png"></a>
+    <a href="https://vsco.co/emmajessicalin"> <img src="vsco-icon.png"></a>
+    <a href="https://emmajessicalin.yelp.com"> <img src="yelp-icon.png"></a>
   </br><a href="mailto:emma.j.lin@gmail.com"><div class="hvr-fade-2">emma.j.lin@gmail.com</div></a>
   </div>
 
