--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 <div class="content-title">
     <a href="#"><h1><div class="hvr-fade-2">ABOUT</div></h1></a>
 </br>
-  <img src="prof-pic-square.jpg" width=250px>
+  <img src="prof-pic-square.JPG" width=250px>
 </br>
 <div class="about-content">
 <h4><center>Hi, I'm Emma. </center></h4>
