--- a/imax.html
+++ b/imax.html
@@ -12,7 +12,7 @@
 <!HOME PANEL>
   <div class="home_panel">
   <div id="home_header">
-    <a href="#"><img src="emmajessicalin-logo.png" width=180px></a>
+    <a href="/website/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
 </div>
   <div class="hvr-forward"><a href="#" id="home_button">RESUME</a></div>
   <div class="hvr-forward"><a href="#" id="home_button">ABOUT</a></div>
@@ -21,10 +21,10 @@
 
 <!CONTACT INFO>
   <div class="contact-info">
-    <a href="#"><img src="linkedin-icon.png"></a>
+    <a href="https://linkedin.com/in/emmajessicalin"><img src="linkedin-icon.png"></a>
     <a href="mailto:emma.j.lin@gmail.com"> <img src="mail-icon.jpg"></a>
-    <a href="#"> <img src="vsco-icon.png"></a>
-    <a href="#"> <img src="yelp-icon.png"></a>
+    <a href="https://vsco.co/emmajessicalin"> <img src="vsco-icon.png"></a>
+    <a href="https://emmajessicalin.yelp.com"> <img src="yelp-icon.png"></a>
   </br><a href="mailto:emma.j.lin@gmail.com"><div class="hvr-fade-2">emma.j.lin@gmail.com</div></a>
   </div>
 
@@ -32,7 +32,7 @@
   <div class="content-title">
     <img src="IMAX/imax-logo-long.jpg" width=100%>
   </br></br>
-      <a href="#"><h1><div class="hvr-fade-2">IMAX CORPORATION</div></h1></a>
+      <a href="https://imax.com"><h1><div class="hvr-fade-2">IMAX CORPORATION</div></h1></a>
 </div>
 <div class="content">
   As an International Marketing Intern at IMAX Corporation, I worked in the marketing department on promotional campaigns for movies and international communication among IMAX corporate offices. My duties included:
