--- a/resume.html
+++ b/resume.html
@@ -12,19 +12,19 @@
 <!HOME PANEL>
   <div class="home_panel">
   <div id="home_header">
-    <a href="#"><img src="emmajessicalin-logo.png" width=180px></a>
+    <a href="/website/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
 </div>
-  <div class="hvr-forward"><a href="#" id="home_button">RESUME</a></div>
-  <div class="hvr-forward"><a href="#" id="home_button">ABOUT</a></div>
-  <div class="hvr-forward"><a href="#" id="home_button">HOME</a></div>
+  <div class="hvr-forward"><a href="/website/resume.html" id="home_button">RESUME</a></div>
+  <div class="hvr-forward"><a href="/website/about.html" id="home_button">ABOUT</a></div>
+  <div class="hvr-forward"><a href="/website/index.html" id="home_button">HOME</a></div>
 </div>
 
 <!CONTACT INFO>
   <div class="contact-info">
-    <a href="#"><img src="linkedin-icon.png"></a>
+    <a href="https://linkedin.com/in/emmajessicalin"><img src="linkedin-icon.png"></a>
     <a href="mailto:emma.j.lin@gmail.com"> <img src="mail-icon.jpg"></a>
-    <a href="#"> <img src="vsco-icon.png"></a>
-    <a href="#"> <img src="yelp-icon.png"></a>
+    <a href="https://vsco.co/emmajessicalin"> <img src="vsco-icon.png"></a>
+    <a href="https://emmajessicalin.yelp.com"> <img src="yelp-icon.png"></a>
   </br><a href="mailto:emma.j.lin@gmail.com"><div class="hvr-fade-2">emma.j.lin@gmail.com</div></a>
 
   </div>
@@ -72,31 +72,31 @@
   <h2>WORK EXPERIENCE</h2>
 </div>
   <div class="content">
-  <b><a href="#"><div class="hvr-fade-yellow-b">UCLA College Academic Counseling</b>, ASK Peer Counselor (Sep. 2016 - Present)</div></a>
+  <b><a href="/website/ask.html"><div class="hvr-fade-yellow-b">UCLA College Academic Counseling</b>, ASK Peer Counselor (Sep. 2016 - Present)</div></a>
   <ul>
     <li>Provided face-to-face advising with students on strategies to achieve academic success</li>
     <li>Created individualized course plans and provided referrals to resources</li>
 </ul>
-<b><a href="#"><div class="hvr-fade-yellow-b">Enrou, Inc.</b>, Head of Owned Media (Aug. 2016 - Apr. 2017)</div></a>
+<b><a href="/website/enrou.html"><div class="hvr-fade-yellow-b">Enrou, Inc.</b>, Head of Owned Media (Aug. 2016 - Apr. 2017)</div></a>
 <ul>
 <li>Conducted competitive analyses and market research in ethical fashion industry</li>
 <li>Utilized analytics tools such as Google Analytics and Facebook insights to direct data-driven decisions for website traffic growth</li>
 <li>Amplified website sessions directed from social referrals starting at 12.4% of total sessions (Sep) to 20.4% of total sessions (Dec)</li>
 <li>Promoted from Marketing Intern to Head of Owned Media to oversee 3 owned media interns and manage deadline-driven projects</li>
 </ul>
-<b><a href="#"><div class="hvr-fade-yellow-b">IMAX Corporation</b>, International Marketing Strategy Intern (Jan. 2017 - Mar. 2017)</div></a>
+<b><a href="/website/imax.html"><div class="hvr-fade-yellow-b">IMAX Corporation</b>, International Marketing Strategy Intern (Jan. 2017 - Mar. 2017)</div></a>
 <ul>
 <li>Spearheaded brand integration proposal for potential partnerships with retailers overseas in 3 countries to drive sales and awareness</li>
 <li>Compiled weekly updates from international regions into flowcharts and PowerPoint deliverables for use by EVP, Global Marketing</li>
 <li>Developed workbook template using Google Apps Script to eliminate inefficiencies in asset ordering for 1,000+ IMAX theaters and integrated new process into 9 international IMAX corporate offices, providing updates in response to user feedback and suggestions</li>
 </ul>
-<b><a href="#"><div class="hvr-fade-yellow-b">Siemer & Associates, LLC</b>, Operations & Event Planning Intern (Sep. 2016-Nov. 2016)</div></a>
+<b><a href="/website/siemer.html"><div class="hvr-fade-yellow-b">Siemer & Associates, LLC</b>, Operations & Event Planning Intern (Sep. 2016-Nov. 2016)</div></a>
 <ul>
 <li>Oversaw planning and execution of Siemer Summit by coordinating with C-level executives and investors in digital media industry</li>
 <li>Eliminated database inefficiencies by implementing Airtable, Event Farm and Excel to track 1,000+ attendees and 50+ speakers</li>
 <li>Introduced and maintained event-specific app used by over 300+ users and updated website daily to track changes in event logistics</li>
 </ul>
-<b><a href="#"><div class="hvr-fade-yellow-b">uTapp, LLC</b>, Business Development Intern (Aug. 2016 - Oct. 2016)</div></a>
+<b><a href="/website/utapp.html"><div class="hvr-fade-yellow-b">uTapp, LLC</b>, Business Development Intern (Aug. 2016 - Oct. 2016)</div></a>
 <ul>
 <li>Surveyed 200+ target consumers and analyzed data on consumer lifestyles and trends to develop most effective app launch strategy</li>
 <li>Evaluated app interface and user experience to provide suggestions for improvements to CEO in order to prepare for official release</li>
@@ -111,24 +111,24 @@
   <h2> LEADERSHIP</h2>
   </div>
 <div class="content">
-  <b><a href="#"><div class="hvr-fade-yellow-b">Undergraduate Business Society</b>, Career Development Committee Director (Oct. 2016 - Present)</div></a>
+  <b><a href="/website/ubs.html"><div class="hvr-fade-yellow-b">Undergraduate Business Society</b>, Career Development Committee Director (Oct. 2016 - Present)</div></a>
   <ul>
     <li>Planned UCLA's only business-specific fair, the UBS Jobs and Internships Fair, which drew 21 firms and 300+ student attendees</li>
     <li>Coordinated with 20 business campus organizations for the annual Business Showcase, including networking sessions and speakers</li>
   </ul>
-  <b><a href="#"><div class="hvr-fade-yellow-b">International Business Fraternity of Delta Sigma Pi</b>, Executive Committee (Mar. 2016 - Present)</div></a>
+  <b><a href="/website/dsp.html"><div class="hvr-fade-yellow-b">International Business Fraternity of Delta Sigma Pi</b>, Executive Committee (Mar. 2016 - Present)</div></a>
   <ul>
     <li>Designed recruitment materials, including flyers, apparel, videos and online graphics, using Adobe Photoshop and Final Cut Pro</li>
     <li>Established tracking system to keep 45+ members accountable for campus marketing, leading to increased turnout of 100+ rushees</li>
     <li>Partnered with Northwestern Mutual to hold a campus-wide professional workshop and info session attended by 120+ students</li>
   </ul>
-  <b><a href="#"><div class="hvr-fade-yellow-b">Student Alumni Association</b>, Assistant Director (Oct. 2015 - Present)</div></a>
+  <b><a href="/website/saa.html"><div class="hvr-fade-yellow-b">Student Alumni Association</b>, Assistant Director (Oct. 2015 - Present)</div></a>
   <ul>
     <li>Promoted campus events to target audience of 29,000+ students, 500,000+ alumni, faculty and the non-UCLA affiliated community</li>
     <li>Delivered monthly PowerPoint decks and interactive workshops to 100+ members to provide professional and academic advice</li>
     <li>Developed targeted online advertisements resulting in a 34% increase in Facebook likes and 97% increase in Instagram followers</li>
   </ul>
-  <b><a href="#"><div class="hvr-fade-yellow-b">Undergraduate Students Association Council</b>, Cultural Affairs Commission Designer (Oct. 2015 - Jun. 2016)</div></a>
+  <b><a href="/website/cac.html"><div class="hvr-fade-yellow-b">Undergraduate Students Association Council</b>, Cultural Affairs Commission Designer (Oct. 2015 - Jun. 2016)</div></a>
   <ul>
     <li>Promoted cultural awareness through event-based campaigns as one of 13 offices in the Undergraduate Student Association Council</li>
     <li>Developed graphic designs and digital content for print marketing, merchandise, and online advertisements using Adobe Photoshop</li>
