--- a/siemer.html
+++ b/siemer.html
@@ -32,7 +32,7 @@
 
 <!CONTENT>
 <div class="content-title">
-  <img src="Siemer/Siemer-Associates-Logo.png">
+  <img src="Siemer-Associates-Logo.png">
     <a href="#"><h1><div class="hvr-fade-2">SIEMER & ASSOCIATES, LLC</div></h1></a>
 </div>
 <div class="content">
@@ -47,7 +47,7 @@
 <hr/>
 </div>
 <div class="content-title">
-  <img src="Siemer/siemer-summit-cover.jpg" width=100%>
+  <img src="siemer-summit-cover.jpg" width=100%>
     <a href="#"><h1><div class="hvr-fade-2">SIEMER SUMMIT</div></h1></a>
 </div>
 <div class="content">
@@ -59,7 +59,7 @@
   At the conference itself, I checked in attendees,
   managed flow of personnel and oversaw breakout sessions.
 </br></br></br>
-  <img src="Siemer/siemer-group.jpg" width=100%>
+  <img src="siemer-group.jpg" width=100%>
 </br>
 <hr/>
 </div>
