--- a/siemer.html
+++ b/siemer.html
@@ -14,7 +14,7 @@
 <!HOME PANEL>
   <div class="home_panel">
   <div id="home_header">
-    <a href="#"><img src="emmajessicalin-logo.png" width=180px></a>
+    <a href="/website/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
 </div>
   <div class="hvr-forward"><a href="/website/resume.html" id="home_button">RESUME</a></div>
   <div class="hvr-forward"><a href="/website/about.html" id="home_button">ABOUT</a></div>
