--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 
 <!CONTENT>
 <div class="content-title">
-    <a href="#"><h1><div class="hvr-fade-2">ABOUT</div></h1></a>
+    <a href="/website/about.html"><h1><div class="hvr-fade-2">ABOUT</div></h1></a>
 </br>
   <img src="prof-pic-square.JPG" width=250px>
 </br>
