--- a/cac.html
+++ b/cac.html
@@ -16,9 +16,9 @@
   <div id="home_header">
     <a href="/website/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
 </div>
-  <div class="hvr-forward"><a href="#" id="home_button">RESUME</a></div>
-  <div class="hvr-forward"><a href="#" id="home_button">ABOUT</a></div>
-  <div class="hvr-forward"><a href="#" id="home_button">HOME</a></div>
+  <div class="hvr-forward"><a href="/website/resume.html" id="home_button">RESUME</a></div>
+  <div class="hvr-forward"><a href="/website/about.html" id="home_button">ABOUT</a></div>
+  <div class="hvr-forward"><a href="/website/index.html" id="home_button">HOME</a></div>
 </div>
 
 <!CONTACT INFO>
@@ -32,7 +32,7 @@
 
 <!CONTENT>
 <div class="content-title">
-    <a href="#"><h1><div class="hvr-fade-2">CULTURAL AFFAIRS COMMISSION</div></h1></a>
+    <a href="http://www.culturalaffairsla.com/"><h1><div class="hvr-fade-2">CULTURAL AFFAIRS COMMISSION</div></h1></a>
 </div>
 <div class="content">
 </div>
