--- a/dsp.html
+++ b/dsp.html
@@ -118,18 +118,18 @@ Each member was given a number of points to reach as a goal, depending on their 
   doing LinkedIn headshots and creating videos for promotional and internal use.
 </br></br>
 <div class="dsp-photos">
-  <img src="board-w17.jpg" class="dsp-photo">
+  <img src="board-w17.JPG" class="dsp-photo">
 </div>
 <div class="dsp-photos">
-  <img src="bella-1.jpg" class="dsp-photo">
-  <img src="ryan-1.jpg" class="dsp-photo">
+  <img src="bella-1.JPG" class="dsp-photo">
+  <img src="ryan-1.JPG" class="dsp-photo">
 </div>
 <div class="dsp-photos">
-  <img src="samy.jpg" class="dsp-photo">
+  <img src="samy.JPG" class="dsp-photo">
 </div>
 <div class="dsp-photos">
-  <img src="ellen-1.jpg" class="dsp-photo">
-  <img src="jess.jpg" class="dsp-photo">
+  <img src="ellen-1.JPG" class="dsp-photo">
+  <img src="jess.JPG" class="dsp-photo">
 </div>
 </div>
 
