--- a/saa.html
+++ b/saa.html
@@ -12,19 +12,19 @@
 <!HOME PANEL>
   <div class="home_panel">
   <div id="home_header">
-    <a href="#"><img src="emmajessicalin-logo.png" width=180px></a>
+    <a href="/website/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
 </div>
-  <div class="hvr-forward"><a href="#" id="home_button">RESUME</a></div>
-  <div class="hvr-forward"><a href="#" id="home_button">ABOUT</a></div>
-  <div class="hvr-forward"><a href="#" id="home_button">HOME</a></div>
+  <div class="hvr-forward"><a href="/website/resume.html" id="home_button">RESUME</a></div>
+  <div class="hvr-forward"><a href="/website/about.html" id="home_button">ABOUT</a></div>
+  <div class="hvr-forward"><a href="/website/index.html" id="home_button">HOME</a></div>
 </div>
 
 <!CONTACT INFO>
   <div class="contact-info">
-    <a href="#"><img src="linkedin-icon.png"></a>
+    <a href="https://linkedin.com/in/emmajessicalin"><img src="linkedin-icon.png"></a>
     <a href="mailto:emma.j.lin@gmail.com"> <img src="mail-icon.jpg"></a>
-    <a href="#"> <img src="vsco-icon.png"></a>
-    <a href="#"> <img src="yelp-icon.png"></a>
+    <a href="https://vsco.co/emmajessicalin"> <img src="vsco-icon.png"></a>
+    <a href="https://emmajessicalin.yelp.com"> <img src="yelp-icon.png"></a>
   </br><a href="mailto:emma.j.lin@gmail.com"><div class="hvr-fade-2">emma.j.lin@gmail.com</div></a>
   </div>
 
@@ -41,9 +41,9 @@
   and to enhance the student experience by providing opportunities that strengthen their lifelong loyalty to UCLA.
 
 <div class="icons">
-  <a href="#"><img src="website-icon.png"></a>
-  <a href="#"><img src="instagram-icon.png"></a>
-  <a href="#"><img src="fb-icon.png"></a>
+  <a href="https://alumni.ucla.edu/student-alumni-association/"><img src="website-icon.png"></a>
+  <a href="https://www.instagram.com/saaucla/"><img src="instagram-icon.png"></a>
+  <a href="https://www.facebook.com/saa.ucla/"><img src="fb-icon.png"></a>
 </div>
 
   <hr/>
@@ -92,7 +92,7 @@
     <ul style="text-align:left">
       <h1><div class="hvr-fade-2">NEW INITIATIVES</div></h1>
     </br>
-    <h3><b><a href="#">BEAT 'SC BONFIRE</a></b></h3>
+    <h3><b><a href="https://alumni.ucla.edu/traditions/beat-sc-bonfire-and-rally/">BEAT 'SC BONFIRE</a></b></h3>
 
         <li>Planned and executed inaugural <b>Beat 'SC Bonfire Woodblock Competition</b></li>
         <li>3 categories for entries: Individual, Student Organizations, and Greek Organizations</li>
@@ -119,7 +119,7 @@
   </br>
 
     <ul style="text-align:left">
-    <h3><b><a href="#">I HEART UCLA WEEK</a></b></h3>
+    <h3><b><a href="https://alumni.ucla.edu/traditions/i-heart-ucla-week/">I HEART UCLA WEEK</a></b></h3>
         <li>Promoted the new campaign in which 5 Bruins were selected to share their stories through a video series during I Heart UCLA Week.</li>
       </br>
       &nbsp; &nbsp; <b>Reach:</b> 45,000+ views on Facebook
