--- a/utapp.html
+++ b/utapp.html
@@ -14,27 +14,27 @@
 <!HOME PANEL>
   <div class="home_panel">
   <div id="home_header">
-    <a href="#"><img src="emmajessicalin-logo.png" width=180px></a>
+    <a href="/website/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
 </div>
-  <div class="hvr-forward"><a href="#" id="home_button">RESUME</a></div>
-  <div class="hvr-forward"><a href="#" id="home_button">ABOUT</a></div>
-  <div class="hvr-forward"><a href="#" id="home_button">HOME</a></div>
+  <div class="hvr-forward"><a href="/website/resume.html" id="home_button">RESUME</a></div>
+  <div class="hvr-forward"><a href="/website/about.html" id="home_button">ABOUT</a></div>
+  <div class="hvr-forward"><a href="/website/index.html" id="home_button">HOME</a></div>
 </div>
 
 <!CONTACT INFO>
   <div class="contact-info">
-    <a href="#"><img src="linkedin-icon.png"></a>
+    <a href="https://linkedin.com/in/emmajessicalin"><img src="linkedin-icon.png"></a>
     <a href="mailto:emma.j.lin@gmail.com"> <img src="mail-icon.jpg"></a>
-    <a href="#"> <img src="vsco-icon.png"></a>
-    <a href="#"> <img src="yelp-icon.png"></a>
+    <a href="https://vsco.co/emmajessicalin"> <img src="vsco-icon.png"></a>
+    <a href="https://emmajessicalin.yelp.com"> <img src="yelp-icon.png"></a>
   </br><a href="mailto:emma.j.lin@gmail.com"><div class="hvr-fade-2">emma.j.lin@gmail.com</div></a>
   </div>
 
 <!CONTENT>
 <div class="content-title">
-  <img src="uTapp/utapp-logo.jpg" width=10%>
+  <img src="utapp-logo.jpg" width=10%>
 </br></br>
-    <a href="#"><h1><div class="hvr-fade-2">UTAPP, LLC</div></h1></a>
+    <a href="https://utappapp.com"><h1><div class="hvr-fade-2">UTAPP, LLC</div></h1></a>
 </div>
 <div class="content">
 </br>
@@ -46,10 +46,10 @@
   I tested the app and made user experience suggestions.
 </br></br>
   <div class="imax-photos">
-    <img src="uTapp/utapp-1.jpeg" class="imax-photo" width=20%>
-    <img src="uTapp/utapp-2.jpeg" class="imax-photo" width=20%>
-    <img src="uTapp/utapp-3.jpeg" class="imax-photo" width=20%>
-    <img src="uTapp/utapp-4.jpeg" class="imax-photo" width=20%>
+    <img src="utapp-1.jpeg" class="imax-photo" width=20%>
+    <img src="utapp-2.jpeg" class="imax-photo" width=20%>
+    <img src="utapp-3.jpeg" class="imax-photo" width=20%>
+    <img src="utapp-4.jpeg" class="imax-photo" width=20%>
   </div>
 
 </div>
