--- a/dsp.html
+++ b/dsp.html
@@ -118,7 +118,7 @@ Each member was given a number of points to reach as a goal, depending on their 
   doing LinkedIn headshots and creating videos for promotional and internal use.
 </br></br>
 <div class="dsp-photos">
-  <img src="board-w17.JPG" class="dsp-photo">
+  <img src="board-w17.jpg" class="dsp-photo">
 </div>
 <div class="dsp-photos">
   <img src="bella-1.JPG" class="dsp-photo">
