--- a/imax.html
+++ b/imax.html
@@ -30,7 +30,7 @@
 
 <!CONTENT>
   <div class="content-title">
-    <img src="IMAX/imax-logo-long.jpg" width=100%>
+    <img src="imax-logo-long.jpg" width=100%>
   </br></br>
       <a href="https://imax.com"><h1><div class="hvr-fade-2">IMAX CORPORATION</div></h1></a>
 </div>
@@ -43,13 +43,13 @@
 </ul>
 <div class="imax-photos">
   <div class="imax-photo">
-    <img src="IMAX/imax-2.jpg" width=250px>
+    <img src="imax-2.jpg" width=250px>
   </div>
   <div class="imax-photo">
-    <img src="IMAX/imax-3.jpg" width=250px>
+    <img src="imax-3.jpg" width=250px>
   </div>
   <div class="imax-photo">
-    <img src="IMAX/imax-4.jpg" width=250px>
+    <img src="imax-4.jpg" width=250px>
   </div>
 </div>
 </br>
