--- a/xiaomi.html
+++ b/xiaomi.html
@@ -14,7 +14,7 @@
 <!HOME PANEL>
   <div class="home_panel">
   <div id="home_header">
-    <a href="#"><img src="emmajessicalin-logo.png" width=180px></a>
+    <a href="/website/index.html"><img src="emmajessicalin-logo.png" width=180px></a>
 </div>
   <div class="hvr-forward"><a href="/website/resume.html" id="home_button">RESUME</a></div>
   <div class="hvr-forward"><a href="/website/about.html" id="home_button">ABOUT</a></div>
@@ -34,12 +34,12 @@
 <div class="content-title">
     <a href="#"><h1><div class="hvr-fade-2">XIAOMI AT CES 2017</div></h1></a>
     <div class="imax-photos">
-      <img src="CES/CES-2.jpg" class="imax-photo" height=260px>
-      <img src="CES/CES-3.jpg" class="imax-photo" height=260px>
+      <img src="CES-2.jpg" class="imax-photo" height=260px>
+      <img src="CES-3.jpg" class="imax-photo" height=260px>
     </div>
     <div class="imax-photos">
-      <img src="CES/Xiaomi-CES-2017.jpg" class="imax-photo" height=200px>
-      <img src="CES/xiaomi-logo.png" class="imax-photo" height=200px>
+      <img src="Xiaomi-CES-2017.jpg" class="imax-photo" height=200px>
+      <img src="xiaomi-logo.png" class="imax-photo" height=200px>
     </div>
 </div>
 <div class="content">
