--- a/saa.html
+++ b/saa.html
@@ -30,7 +30,7 @@
 
 <!CONTENT>
   <div class="content-title">
-    <img src="SAA/saa-group.jpg" width=100%>
+    <img src="saa-group.jpg" width=100%>
   </br></br>
       <a href="#"><h1><div class="hvr-fade-2">STUDENT ALUMNI ASSOCIATION</div></h1></a>
 </div>
@@ -105,15 +105,15 @@
     </p>
   </div>
   <div id="column-3">
-    <img src="SAA/woodblocks.png" width=100%>
+    <img src="woodblocks.png" width=100%>
   </div>
 </div>
 <div class="two-column">
   <div id="column-3">
   </br></br>
-    <img src="SAA/SM-scavenger-hunt.jpg" width=100%>
+    <img src="SM-scavenger-hunt.jpg" width=100%>
   </br></br>
-    <img src="SAA/SM-contest-3.jpg" width=100%>
+    <img src="SM-contest-3.jpg" width=100%>
   </div>
   <div id="column-4">
   </br>
