--- a/ubs.html
+++ b/ubs.html
@@ -32,7 +32,7 @@
 
 <!CONTENT>
 <div class="content-title">
-  <img src="ubs-logo-2.png" width=180px>
+  <img src="ubs-logo.png" width=180px>
     <a href="/website/dsp.html"><h1><div class="hvr-fade-2">UNDERGRADUATE BUSINESS SOCIETY</div></h1></a>
 </div>
 <div class="content">
