--- a/about.html
+++ b/about.html
@@ -54,12 +54,12 @@ an <a href="/website/saa.html"><div class="hvr-fade-yellow">event-based organiza
 <a href="/website/ubs.html"><div class="hvr-fade-yellow">business organizations that focus on the professional development of students</div></a>.
 </br>
 </br>
-I'm an <a href="#"><div class="hvr-fade-yellow">ISFJ</div></a>,
+I'm an <a href="https://www.16personalities.com/isfj-personality"><div class="hvr-fade-yellow">ISFJ</div></a>,
 cheese enthusiast and
 <a href="https://emmajessicalin.yelp.com"><div class="hvr-fade-yellow">Yelper</div></a>.
 In my free time, I love <a href="https://vsco.co/emmajessicalin"><div class="hvr-fade-yellow">taking photos</div></a>,
 <a href="/website/creative.html"><div class="hvr-fade-yellow">drawing</div></a>
-and listening to the <a href="#"><div class="hvr-fade-yellow">Hamilton soundtrack</div></a>.
+and listening to the <a href="https://play.spotify.com/album/1kCHru7uhxBUdzkm4gzRQc"><div class="hvr-fade-yellow">Hamilton soundtrack</div></a>.
 
 </div>
 
